--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -19,21 +19,20 @@ const TAGS = {
 }
 const PROJECTS = [
   {
-    title: "SVGL - A beautiful library with SVG logos",
+    title: "MAHIRO - Bot de Discord multiproposito",
     description:
-      "Biblioteca de logos SVG de las marcas más populares. +10k visitas al mes. +2K svgs descargados. Creado desde cero con Next.js, React y Tailwind CSS.",
-    link: "https://svgl.vercel.app/",
-    github: "https://github.com/pheralb/svgl",
-    image: "/projects/svgl.webp",
-    tags: [TAGS.NEXT, TAGS.TAILWIND],
+      "Uno de los increíbles bots de Discord con toneladas de funciones que cubrirán tus necesidades en tu servidor de Discord.",
+    link: "https://mahiro.app/",
+    image: "/projects/mahiro.png",
+    tags: [],
   },
   {
-    title: "AdventJS - Retos de programación con JavaScript y TypeScript",
+    title: "ILoveMusic - Reproductor de musica en streaming",
     description:
-      "Plataforma gratuita con retos de programación. Más de 1 millón de visitas en un mes. +50K retos completados. Creada desde cero con Next.js, React y Tailwind CSS.",
-    link: "https://adventjs.dev",
-    image: "/projects/adventjs.webp",
-    tags: [TAGS.NEXT, TAGS.TAILWIND],
+      "Escucha tu música favorita a traves de servicios de terceros, como nodelink. Escucha en la mejor calidad posible.",
+    github: "https://github.com/ronaldzav/ilovemusic",
+    image: "/projects/ilovemusic.png",
+    tags: [],
   },
 ]
 ---
