--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Hero from "@/components/Hero.astro"
 
 <Layout
   title="Porfolio de ronaldzav - Desarrollador Back-end con 3 años de experiencia"
-  description="Contrata a ronaldzav para desarrollar la logica de tu servidor. Desarrollador Back-end y Creador de Contenido"
+  description="Contrata a ronaldzav para desarrollar la logica de tu servidor. Desarrollador Back-end con más de 3 años de experiencia"
 >
   <main class="px-4">
     <SectionContainer class="py-16 md:py-36">
